--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="col-1"></div>
                 <div class=" col-10  ">
                     <div class="mt-5 text-center titres">
-                        <h2 class="hyper">Comment fonctionne l'Application clean city</h2>
+                        <h2 class="hyper">Comment avoir acces a nos differents services </h2>
                     </div>
                     <div class="  mt-5 text-center">
                         <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates neque nobis quia libero dolores doloribus soluta nostrum, consequuntur iusto vitae ipsa beatae sit necessitatibus ratione incidunt consectetur odio ullam obcaecati!orem
