--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <img class="profil" src="images/equipe/hamidou.jpg" alt="">
                         </div>
                         <div class="">
-                            <h3 class="profilname text-center">Hamidou Natali </h3>
+                            <h3 class="profilname text-center">Amidou Natali </h3>
                         </div>
                     </div>
                 </div>
