--- a/equipe.html
+++ b/equipe.html
@@ -21,7 +21,288 @@
 </head>
 
 <body>
+    <header class="fixed-top">
+        <nav class="navbar  navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                   Trouvermonjurist.com
+                </a>
+                <div class=" numero">
+                </div>
+                <div class="om-social">
+                    <i class="fa fa-mobile-phone"></i> +226 73768124
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-youtube-play"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                </div>
+            </div>
+        </nav>
+        <nav class=" navbar-expand-sm bg-light">
+            <div class="container-fluid border-bottom menu">
+                <div class="row top-nav">
+                    <div class="  col-lg-3 ">
+                    </div>
+                    <div class=" col-lg-6 menu ">
+                        <ul class="nav justify-content-between ">
+                            <li class="nav-item ">
+                                <a class="nav-links " href="index.html">Accueil</a>
+                            </li>
+                            <li class=" nav-item ">
+                                <a class="nav-links " href="service.html ">Services</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#sensibilisation">Sensibilisation</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="equipe.html ">Equipe </a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="# ">Forum</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
 
+                    <div class="col-lg-3 navbar-nav ">
+                    </div>
+
+                </div>
+            </div>
+
+        </nav>
+    </header>
+    <section>
+        <div class="containe">
+            <div class="row mt-5">
+                <div class="mt-5 text-center tire">
+                    <h1 class=" mt-5">Une Equipe jeune et dynamique</h1>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class=" mt-5 ">
+        <div class="container ">
+
+
+            <!-- <div class="row mt-5 ">
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/hamidou.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Amidou NATALI </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle" src="images/equipe/maiga.jpeg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profil name text-center "> Ousmane MAIGA</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/mande.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Daouda MANDE </h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/WhatsApp massiri.35.jpeg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center "> Gilbert MASSIRI</h3>
+                        </div>
+                    </div>
+
+                </div>
+            </div> -->
+    </section>
+    <section class="">
+        <div class="container ">
+            <div class="row mt-5 ">
+
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/hamidou.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Amidou NATALI </h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle" src="images/equipe/maiga.jpeg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center "> Ousmane MAIGA</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/mande.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Daouda MANDE </h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/WhatsApp massiri.35.jpeg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center "> Gilbert MASSIRI</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 mt-5">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/marie.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Marie Charles Dorcasse Sanou</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5 ">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/valerie.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center "> Valérie K. Marcelle BATINAN</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/domi.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center "> Dominique Mwinzaome HIEN</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mt-5">
+                    <div class=" ">
+                        <div class=" ">
+                            <img class="profil  rounded-circle " src="images/equipe/WhaOnagja54.jpeg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Patrice Lamoudia ONADJA</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="equipe ">
+        <div class="container ">
+            <div class="row mt-5 ">
+                <div class="col-lg-3 ">
+                    <div class="card ">
+                        <div class=" ">
+                            <img class="profil " src="images/equipe.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">Kinina SOURABIE</h3>
+                            <h5 class="text-center">Juriste Privatiste</h5>
+                            <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class="card ">
+                        <div class=" ">
+                            <img class="profil " src="images/equipe.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">SDFGHJKJH</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class="card ">
+                        <div class=" ">
+                            <img class="profil " src="images/equipe.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">DFGHJKLKJHJGFD</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 ">
+                    <div class="card ">
+                        <div class=" ">
+                            <img class="profil " src="images/equipe.jpg " alt=" ">
+                        </div>
+                        <div class=" ">
+                            <h3 class="profilname text-center ">SDFGHJKHGF </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <footer class="footer bg-dark text-white mt-5 ">
+        <div class="container-fluid text-center mt-5 ">
+            <h4 class="mt-2 text-white ">Tous droits reservés Trouvermonjurist.com</h4>
+            <p class="mt-2 ">
+                Fait avec <i class=" text-danger fa-solid fa-heart ">
+                    </i> par l'équipe Trouvermonjurist.com
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
