--- a/service.html
+++ b/service.html
@@ -39,22 +39,41 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid border-bottom menu ">
-            <div class="row top-nav ">
-                <div class="col-2"></div>
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col-sm-2 ">Accueil</div>
-                        <div class="col-sm-2">Services </div>
-                        <div class="col-sm-2 ">Sensibilisation</div>
-                        <div class="col-sm-2 ">Equipe</div>
-                        <div class="col-sm-2 ">Forum</div>
-                        <div class="col-sm-2 "> Contact</div>
+        <nav class=" navbar-expand-sm bg-light">
+            <div class="container-fluid border-bottom menu">
+                <div class="row top-nav">
+                    <div class="  col-lg-3 ">
                     </div>
+                    <div class=" col-lg-6 menu ">
+                        <ul class="nav justify-content-between ">
+                            <li class="nav-item ">
+                                <a class="nav-links " href="index.html">Accueil</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="service.html">Services</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#sensibilisation">Sensibilisation</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="equipe.html">Equipe </a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#">Forum</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#contact ">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 navbar-nav ">
+                    </div>
+
                 </div>
-                <div class="col-2"></div>
             </div>
-        </div>
+
+        </nav>
     </header>
     <section class="accueil ">
         <div class="container-fluid ">
@@ -73,7 +92,7 @@
             <div class="row mt-3">
                 <div class="col-12">
                     <div class="mt-5 text-center titres">
-                        <h2 class="hyper">Nos domaines d'activité</h2>
+                        <h2 class="hyper tire">Nos domaines d'activité</h2>
                     </div>
                     <div class="  mt-5 text-center">
                         <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates neque nobis quia libero dolores doloribus soluta nostrum, consequuntur iusto vitae ipsa beatae sit necessitatibus ratione incidunt consectetur odio ullam obcaecati!orem
@@ -115,19 +134,19 @@
                 <div class="col-4 " style="width: 20rem; ">
                     <img class="card-img-top w-50 center" src="images/dreams-3405257_1920.jpg" alt="Card image cap ">
                     <div class="tit ">
-                        <h5 class="text-center ">Droit civil
+                        <h5 class="text-center ">Droit de la Famille
                         </h5>
                     </div>
                 </div>
 
                 <div class="col-4 center " style="width: 18rem; ">
-                    <img class=" card-img-top w-50 center" src="images/child-ge3550c428_1920.jpg " alt="Card image cap ">
+                    <img class=" card-img-top w-50 center" src="images/mellote.jpg " alt="Card image cap ">
                     <div class="tit ">
-                        <h5 class="text-center ">Droit penal</h5>
+                        <h5 class="text-center ">Droit pénal</h5>
                     </div>
                 </div>
                 <div class="col-4 center" style="width: 18rem; ">
-                    <img class=" card-img-top mt-3 w-50 center" src="images/praying-5406270_1920.jpg" alt="Card image cap ">
+                    <img class=" card-img-top mt-3 w-50 center" src="images/prier.jpg" alt="Card image cap ">
                     <div class="tit ">
                         <h5 class="text-center">Droit des affaires
                         </h5>
@@ -138,9 +157,9 @@
         <div class="container mt-5 ">
             <div class="row  ">
                 <div class="col-4" style="width: 17rem; ">
-                    <img class=" card-img-top w-50 center " src="images/ivory-coast-6289444_1920.jpg" alt="Card image cap ">
+                    <img class=" card-img-top w-50 center " src="images/civil.jpg" alt="Card image cap ">
                     <div class="card-body ">
-                        <h5 class="text-center ">Droit de la Famille</h5>
+                        <h5 class="text-center ">Droit civil</h5>
 
                     </div>
                 </div>
@@ -161,9 +180,11 @@
     </section>
     <footer class="footer bg-dark text-white mt-5">
         <div class="container-fluid  text-center mt-5 ">
-            <h6 class="">
-                <em>Fait avec <i class=" text-danger fa-solid fa-heart ">
-                    </i> par l'équipe Trouvermonjurist.com</em> </h6>
+            <h4 class="mt-2 text-white">Tous droits reservés Trouvermonjurist.com</h4>
+            <p class="mt-2">
+                Fait avec <i class=" text-danger fa-solid fa-heart ">
+                    </i> par l'équipe Trouvermonjurist.com
+            </p>
 
         </div>
     </footer>
