--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="font-awesome/css/fontawesome.min.css"> -->
+    <link rel="stylesheet" href="font-awesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="font-awesome/css/all.css">
-    <!-- <link rel="stylesheet" href="font-awesome/css/brands.css"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- <link rel=" stylesheet " href="css/flaticon.css "> -->
+    <link rel=" stylesheet " href="css/flaticon.css ">
     <link rel="stylesheet " href="css/style.css ">
     <link rel="icon" href="images/Balance.jpg">
     <title>Trouver mon juriste.com</title>
@@ -39,41 +36,60 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid border-bottom menu ">
-            <div class="row top-nav ">
-                <div class="col-2"></div>
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col-sm-2 ">Accueil</div>
-                        <div class="col-sm-2">Services </div>
-                        <div class="col-sm-2 ">Sensibilisation</div>
-                        <div class="col-sm-2 ">Equipe</div>
-                        <div class="col-sm-2 ">Forum</div>
-                        <div class="col-sm-2 "> Contact</div>
+        <nav class=" navbar-expand-sm bg-light">
+            <div class="container-fluid border-bottom menu">
+                <div class="row top-nav">
+                    <div class="  col-lg-3 ">
                     </div>
+                    <div class=" col-lg-6 menu ">
+                        <ul class="nav justify-content-between ">
+                            <li class="nav-item ">
+                                <a class="nav-links " href="# ">Accueil</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="service.html">Services</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#sensibilisation">Sensibilisation</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="equipe.html">Equipe </a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="# ">Forum</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-links " href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 navbar-nav ">
+                    </div>
+
                 </div>
-                <div class="col-2"></div>
             </div>
-        </div>
+
+        </nav>
     </header>
     <section class="accueil ">
-        <div class="container-fluid ">
+        <div class="container ">
             <div class="row imager ">
-                <div class="col-2"></div>
-                <div class="border col-8 paragraph">
+                <div class="col-lg-2"></div>
+                <div class="border col-lg-8 paragraph">
                     <h1 class="over"> Pour un monde plus juste,
                         <br> Nous vous accompagnons jusqu'au bout
                     </h1>
                 </div>
-                <div class="col-2"></div>
+                <div class="col-lg-2"></div>
             </div>
         </div>
     </section>
     <section>
         <div class="container">
             <div class="row mt-5">
-                <div class="cardi col-lg-6">
-                    <h2 class="card-header text-white text-center bg-info"> <span class="ligne-horizontal">Notre mission</span></h2>
+                <!-- <div class="cardi col-lg-6">
+                    <h2 class=" text-white text-center bg-info"> <span class="ligne-horizontal">Notre mission</span></h2>
                     <h5 class="mt-3"> Nous proposons un service axe la simplicite et methodiquement elaborée pour repondre a vos besoin.L'innovation vient du fait que l’utilisation de la technologie pour favoriser l’accès au droit et à la justice est un grand pas vers
                         une vulgarisation des procedures judiciaire a travers le numerique.L’accès au droit et aux professionnels de droit en Afrique a longtemps été et constitue toujours un véritable casse-tête pour les justiciables et surtout les jeunes
                         entrepreneurs.
@@ -82,24 +98,24 @@
                 </div>
                 <div class=" col-lg-6 mt-5">
                     <img class="rond" src="images/equipe.jpg" alt="">
-                </div>
+                </div> -->
                 <div class="rond col-lg-6 mt-5">
 
                     <img class="rond h-100" src="images/vision.jpg" alt="">
                 </div>
                 <div class="cardi col-lg-6 mt-5">
-                    <h2 class="text-center card-header text-white bg-info"> Notre Vision</h2>
+                    <h2 class="mt-3 tire"> Notre Vision</h2>
                     <h5 class="mt-3"> La dimension humaine de notre métier est primordiale pour nous. Nous la considérons comme l’atout majeur d’une collaboration réussie, qu’il s’agisse des relations entre les avocats ou des relations entre justiciables. Pour participer
                         à cette évolution, nous devons cultiver une posture d’ouverture, d’engagement et d’exigence qui nous permet d’accompagner nos clients avec pragmatisme et innovation sur les grands enjeux juridiques </h5>
                 </div>
                 <div class="cardi col-lg-6 mt-5">
-                    <h2 class=" card-header text-white text-center bg-info ">Nos Objectifs</h2>
+                    <h2 class=" tire  mt-3">Notre Mission</h2>
                     <h5 class="mt-3"> L'assistant juridique assure les tâches de secrétariat pour un employeur du milieu juridique comme peut l'être un cabinet d'avocat, un notaire, une équipe de juriste d'entreprise ou encore un huissier.L'assistant juridique exerce des
                         missions plus ou moins importantes et en rapport avec la justice selon ses capacités et sa connaissance du droit.Une assistance juridique reactive.L'imperatif de rapidite imposee par nos clients ne pose pas de probleme a nos equipes.
                     </h5>
                 </div>
                 <div class="rond col-lg-6 mt-5">
-                    <img class="rond" src="images/our-credo.jpg" alt="">
+                    <img class="rond" src="images/equipe.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -111,8 +127,8 @@
                     <div class="img d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0 " style="background-image:url(images/droit-civil-2.jpg); ">
                     </div>
                     <div class="d-flex mt-3">
-                        <div class="img img-2 mr-md-2 w-100 " style="background-image:url(images/portrait-femme.jpg); "></div>
-                        <div class="img img-2 ml-md-2 w-100 " style="background-image:url(images/Balance.jpg); "></div>
+                        <div class="img img-2 mr-md-2 w-100 " style="background-image:url(images/salle.jpg); "></div>
+                        <div class="img img-2 ml-md-2 w-100 " style="background-image:url(images/ammer.jpg); "></div>
                     </div>
                 </div>
                 <div class="col-lg-6 ">
@@ -187,7 +203,7 @@
         <div class="container-fluid ">
             <div class="row scroll">
                 <div class="transition">
-                    <h1 class="text-white mt-5">Qui sommes nous?</h1>
+                    <h2 class="text-white tire mt-5">Qui sommes nous?</h2>
                     <h5 class="text-center text-white">Nous sommes des juristes, motiver par la volonté de mettre nos compétence
                         <br> a la disposition de ceux qui sont dans le besoin. Nous avons la volonté de faire de
                         <br>notre societé une sociéte plus libre et
@@ -196,19 +212,18 @@
             </div>
         </div>
     </section>
-    <section class="paralaxe">
-
-        <h1 class="text-center mt-5 border-top">
-            Programme de sensibilisation</h1>
+    <section id="sensibilisation" class="paralaxe">
+        <h2 class="text-center tire mt-5 border-top">
+            Programme de sensibilisation</h2>
         <div class="container">
             <div class="row">
-                <div class="col-6 mt-5"><img class="photo w-100" src="images/finger.jpg" alt=""></div>
-                <div class="col-6 mt-5">
+                <div class="col-lg-6 mt-5"><img class="photo w-100" src="images/finger.jpg" alt=""></div>
+                <div class="col-lg-6 mt-5">
                     <h2>Les droits de la femme</h2>
                     <h4>Nul n'est cense ignorer la loi</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates maiores officiis fugit magni ullam? Itaque reiciendis, cupiditate quae corrupti at adipisci numquam, aliquam rem fugiat explicabo tenetur dolorum, Lorem ipsum dolor
-                        dignissimos doloremque hic ipsa. Dolores quisquam expedita fugit nulla exercitationem quam cum ea maxime nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit eaque, nam libero pariatur temporibus quidem! Pariatur
-                        s.
+                    <p> Nous proposons un service axe la simplicite et methodiquement elaborée pour repondre a vos besoin.L'innovation vient du fait que l’utilisation de la technologie pour favoriser l’accès au droit et à la justice est un grand pas vers
+                        une vulgarisation des procedures judiciaire a travers le numerique.L’accès au droit et aux professionnels de droit en Afrique a longtemps été et constitue toujours un véritable casse-tête pour les justiciables et surtout les jeunes
+                        entrepreneurs.
                     </p>
                 </div>
             </div>
@@ -218,8 +233,8 @@
     <section>
         <div class="container couleur mt-5">
             <div class="row ">
-                <div class="col-1"></div>
-                <div class=" col-10  ">
+                <div class="col-lg-1"></div>
+                <div class=" col-lg-10  ">
                     <div class="mt-5 text-center titres">
                         <h2 class="hyper">Comment avoir acces a nos differents services </h2>
                     </div>
@@ -230,108 +245,15 @@
                             ratione incidunt consectetur odio ullam obcaecati!orem ipsum dolor sit amet consee</h5>
                     </div>
                 </div>
-                <div class="col-1"></div>
+                <div class="col-lg-1"></div>
             </div>
         </div>
     </section>
-    <section class="equipe mt-5">
-        <div class="container">
-            <div class="mt-5 text-center titres">
-                <h1 class="">Une Equipe jeune et dynamique</h1>
-            </div>
 
-            <div class="row mt-5">
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/hamidou.jpg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Amidou Natali </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/maiga.jpeg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Maiga Ousmane</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/mande.jpg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Daouda Mande </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/marie.jpg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Dorcasse Sanou</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
-    <section class="equipe">
-        <div class="container">
-            <div class="row mt-5">
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/WhatsApp massiri.35.jpeg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Massiri Gilbert</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/valerie.jpg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Batinan Valerie</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/domi.jpg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Hien Dominique</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="">
-                            <img class="profil" src="images/equipe/WhaOnagja54.jpeg" alt="">
-                        </div>
-                        <div class="">
-                            <h3 class="profilname text-center">Onadja Patrick </h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
     <section>
-        <div class="container ">
+        <div id="contact" class="container ">
             <div class="row mt-5">
-                <h2 class="hyper">Contactez-nous</h2>
+                <h2 class="hyper tire">Contactez-nous</h2>
                 <div class="col-lg-6 mt-5">
                     <div class="contact-info ">
                         <div class="ci-item ">
@@ -366,7 +288,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 mt-4">Géolocalisation
+                <div class="col-lg-6 mt-4">Géolocalisation
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62361.499191386705!2d-1.599627494759736!3d12.343111063927337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xe2e9429f5d331c7%3A0x82f28a1194b6aeb0!2sPissy%2C%20Ouagadougou!5e0!3m2!1sfr!2sbf!4v1648584442120!5m2!1sfr!2sbf "
                         width="600 " height="450 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade "></iframe>
                 </div>
@@ -376,9 +298,11 @@
 
     <footer class="footer bg-dark text-white mt-5">
         <div class="container-fluid  text-center mt-5 ">
-            <h6 class="">
-                <em>Fait avec <i class=" text-danger fa-solid fa-heart ">
-                    </i> par l'équipe Trouvermonjurist.com</em> </h6>
+            <h4 class="mt-2 text-white">Tous droits reservés Trouvermonjurist.com</h4>
+            <p class="mt-2">
+                Fait avec <i class=" text-danger fa-solid fa-heart ">
+                    </i> par l'équipe Trouvermonjurist.com
+            </p>
 
         </div>
     </footer>
