--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="styles/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="font-awesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="font-awesome/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel=" stylesheet " href="css/flaticon.css ">
     <link rel="stylesheet " href="css/style.css ">
-    <link rel="icon" href="images/Balance.jpg">
+    <link rel="icon" href="images/marteau.jpg">
     <title>Trouver mon juriste.com</title>
 </head>
 
