--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel=" stylesheet " href="css/flaticon.css ">
     <link rel="stylesheet " href="css/style.css ">
-    <link rel="icon" href="images/Balance.jpg">
+    <link rel="icon" href="images/marteau.jpg">
     <title>Trouver mon juriste.com</title>
 </head>
 
