commit du 10mai

--- a/equipe.html
+++ b/equipe.html
@@ -24,58 +24,62 @@
     <header class="fixed-top">
         <nav class="navbar  navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                   Trouvermonjurist.com
-                </a>
-                <div class=" numero">
-                </div>
+                <label for="" class="numero">Trouvermonjurist.com</label>
                 <div class="om-social">
-                    <i class="fa fa-mobile-phone"></i> +226 73768124
+                    <a href="#connexion.html"> <button class="btn btn-primary" type="submit">Connexion</button></a>
+                    <a href="#connexion.html"> <button class="btn btn-danger" type="submit">Inscription</button></a>
+
+                    <!-- <i class="fa fa-mobile-phone"></i> +226 73768124
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-youtube-play"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fa fa-pinterest-p"></i></a> -->
                 </div>
+
             </div>
         </nav>
-        <nav class=" navbar-expand-sm bg-light">
-            <div class="container-fluid border-bottom menu">
-                <div class="row top-nav">
-                    <div class="  col-lg-3 ">
-                    </div>
-                    <div class=" col-lg-6 menu ">
-                        <ul class="nav justify-content-between ">
-                            <li class="nav-item ">
-                                <a class="nav-links " href="index.html">Accueil</a>
-                            </li>
-                            <li class=" nav-item ">
-                                <a class="nav-links " href="service.html ">Services</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#sensibilisation">Sensibilisation</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="equipe.html ">Equipe </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="# ">Forum</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+        <nav class="menu">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn"> <i class="fa fa-bars"></i></label>
 
-                    <div class="col-lg-3 navbar-nav ">
-                    </div>
+            <ul>
+                <li>
+                    <a href="#">Accueil</a>
+                </li>
+                <li>
+                    <a href="service.html">Services</a>
+                </li>
+                <li>
+                    <a href="equipe.html">Equipe</a>
+                </li>
+                <li>
+                    <a href="programme.html">Programme</a>
+                </li>
+                <li>
+                    <a href="#">Forum</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
 
-                </div>
-            </div>
-
+            </ul>
         </nav>
     </header>
-    <section>
+    <section class="accueilequipe ">
+        <div class="container-fluid ">
+            <div class="row imager ">
+                <div class="col-2"></div>
+                <div class=" col-8 paragraph">
+                    <h1 class="tire">
+                        Une Equipe jeune et dynamique
+                    </h1>
+                </div>
+                <div class="col-2"></div>
+            </div>
+        </div>
+    </section>
+    <!-- <section>
         <div class="containe">
             <div class="row mt-5">
                 <div class="mt-5 text-center tire">
@@ -83,56 +87,7 @@
                 </div>
             </div>
         </div>
-
-    </section>
-    <section class=" mt-5 ">
-        <div class="container ">
-
-
-            <!-- <div class="row mt-5 ">
-                <div class="col-lg-3 ">
-                    <div class=" ">
-                        <div class=" ">
-                            <img class="profil  rounded-circle " src="images/equipe/hamidou.jpg " alt=" ">
-                        </div>
-                        <div class=" ">
-                            <h3 class="profilname text-center ">Amidou NATALI </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 ">
-                    <div class=" ">
-                        <div class=" ">
-                            <img class="profil  rounded-circle" src="images/equipe/maiga.jpeg " alt=" ">
-                        </div>
-                        <div class=" ">
-                            <h3 class="profil name text-center "> Ousmane MAIGA</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 ">
-                    <div class=" ">
-                        <div class=" ">
-                            <img class="profil  rounded-circle " src="images/equipe/mande.jpg " alt=" ">
-                        </div>
-                        <div class=" ">
-                            <h3 class="profilname text-center ">Daouda MANDE </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 ">
-                    <div class=" ">
-                        <div class=" ">
-                            <img class="profil  rounded-circle " src="images/equipe/WhatsApp massiri.35.jpeg " alt=" ">
-                        </div>
-                        <div class=" ">
-                            <h3 class="profilname text-center "> Gilbert MASSIRI</h3>
-                        </div>
-                    </div>
-
-                </div>
-            </div> -->
-    </section>
+    </section> -->
     <section class="">
         <div class="container ">
             <div class="row mt-5 ">
@@ -197,7 +152,7 @@
                             <img class="profil  rounded-circle " src="images/equipe/marie.jpg " alt=" ">
                         </div>
                         <div class=" ">
-                            <h5 class="profilname text-center ">Marie Charles Dorcasse Sanou</h5>
+                            <h5 class="profilname text-center ">Marie C. Dorcasse SANOU</h5>
                             <h6 class="text-center">Juriste Privatiste</h6>
                             <h5 class="text-primary text-center"><span><i class="fa-brands fa-linkedin-in"></i></span> <span><i class="fa-brands fa-facebook-f"></i></span> <span><i class="fa-brands fa-instagram"></i></span>
                             </h5>
