--- a/service.html
+++ b/service.html
@@ -24,55 +24,46 @@
     <header class="fixed-top">
         <nav class="navbar  navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                   Trouvermonjurist.com
-                </a>
-                <div class=" numero">
-                </div>
+                <label for="" class="numero">Trouvermonjurist.com</label>
                 <div class="om-social">
-                    <i class="fa fa-mobile-phone"></i> +226 73768124
+                    <a href="#connexion.html"> <button class="btn btn-primary" type="submit">Connexion</button></a>
+                    <a href="#connexion.html"> <button class="btn btn-danger" type="submit">Inscription</button></a>
+
+                    <!-- <i class="fa fa-mobile-phone"></i> +226 73768124
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-youtube-play"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fa fa-pinterest-p"></i></a> -->
                 </div>
+
             </div>
         </nav>
-        <nav class=" navbar-expand-sm bg-light">
-            <div class="container-fluid border-bottom menu">
-                <div class="row top-nav">
-                    <div class="  col-lg-3 ">
-                    </div>
-                    <div class=" col-lg-6 menu ">
-                        <ul class="nav justify-content-between ">
-                            <li class="nav-item ">
-                                <a class="nav-links " href="index.html">Accueil</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="service.html">Services</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#sensibilisation">Sensibilisation</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="equipe.html">Equipe </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#">Forum</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#contact ">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+        <nav class="menu">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn"> <i class="fa fa-bars"></i></label>
 
-                    <div class="col-lg-3 navbar-nav ">
-                    </div>
+            <ul>
+                <li>
+                    <a href="#">Accueil</a>
+                </li>
+                <li>
+                    <a href="service.html">Services</a>
+                </li>
+                <li>
+                    <a href="equipe.html">Equipe</a>
+                </li>
+                <li>
+                    <a href="programme.html">Programme</a>
+                </li>
+                <li>
+                    <a href="#">Forum</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
 
-                </div>
-            </div>
-
+            </ul>
         </nav>
     </header>
     <section class="accueil ">
