--- a/index.html
+++ b/index.html
@@ -24,67 +24,57 @@
     <header class="fixed-top">
         <nav class="navbar  navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                   Trouvermonjurist.com
-                </a>
-                <div class=" numero">
-                </div>
+                <label for="" class="numero">Trouvermonjurist.com</label>
                 <div class="om-social">
-                    <i class="fa fa-mobile-phone"></i> +226 73768124
+                    <a href="#connexion.html"> <button class="btn btn-primary" type="submit">Connexion</button></a>
+                    <a href="#connexion.html"> <button class="btn btn-danger" type="submit">Inscription</button></a>
+
+                    <!-- <i class="fa fa-mobile-phone"></i> +226 73768124
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-youtube-play"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                    <a href="#"><i class="fa fa-pinterest-p"></i></a> -->
                 </div>
+
             </div>
         </nav>
-        <nav class=" navbar-expand-sm bg-light">
-            <div class="container-fluid border-bottom menu">
-                <div class="row top-nav">
-                    <div class="  col-lg-3 ">
-                    </div>
-                    <div class=" col-lg-6 menu ">
-                        <ul class="nav justify-content-between ">
-                            <li class="nav-item ">
-                                <a class="nav-links " href="# ">Accueil</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="service.html">Services</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#sensibilisation">Sensibilisation</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="equipe.html">Equipe </a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="# ">Forum</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-links " href="#contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+        <nav class="menu">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn"> <i class="fa fa-bars"></i></label>
 
-                    <div class="col-lg-3 navbar-nav ">
-                    </div>
+            <ul>
+                <li>
+                    <a href="#">Accueil</a>
+                </li>
+                <li>
+                    <a href="service.html">Services</a>
+                </li>
+                <li>
+                    <a href="equipe.html">Equipe</a>
+                </li>
+                <li>
+                    <a href="programme.html">Programme</a>
+                </li>
+                <li>
+                    <a href="#">Forum</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
 
-                </div>
-            </div>
-
+            </ul>
         </nav>
     </header>
-    <section class="accueil ">
-        <div class="container ">
-            <div class="row imager ">
-                <div class="col-lg-2"></div>
-                <div class="border col-lg-8 paragraph">
-                    <h1 class="over"> Pour un monde plus juste,
+    <section class="accueil">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <!-- <img class="accueil" src="images/marteau.jpg" alt=""> -->
+                    <div class="over"> Pour un monde plus juste,
                         <br> Nous vous accompagnons jusqu'au bout
-                    </h1>
+                    </div>
                 </div>
-                <div class="col-lg-2"></div>
             </div>
         </div>
     </section>
@@ -102,23 +92,23 @@
                 <div class=" col-lg-6 mt-5">
                     <img class="rond" src="images/equipe.jpg" alt="">
                 </div> -->
-                <div class="rond col-lg-6 mt-5">
+                <div class=" col-lg-6 col-md-6 col-sm-12 mt-5">
 
-                    <img class="rond h-100" src="images/vision.jpg" alt="">
+                    <img class="rond  " src="images/vision.jpg" alt="">
                 </div>
-                <div class="cardi col-lg-6 mt-5">
-                    <h2 class="mt-3 tire"> Notre Vision</h2>
-                    <h5 class="mt-3"> La dimension humaine de notre métier est primordiale pour nous. Nous la considérons comme l’atout majeur d’une collaboration réussie, qu’il s’agisse des relations entre les avocats ou des relations entre justiciables. Pour participer
+                <div class="cardi col-lg-6 col-md-6 col-sm-12 mt-5">
+                    <h2 class="mt-3 tire text-center"> Notre Vision</h2>
+                    <h5 class="mt-3 text-center"> La dimension humaine de notre métier est primordiale pour nous. Nous la considérons comme l’atout majeur d’une collaboration réussie, qu’il s’agisse des relations entre les avocats ou des relations entre justiciables. Pour participer
                         à cette évolution, nous devons cultiver une posture d’ouverture, d’engagement et d’exigence qui nous permet d’accompagner nos clients avec pragmatisme et innovation sur les grands enjeux juridiques </h5>
                 </div>
-                <div class="cardi col-lg-6 mt-5">
-                    <h2 class=" tire  mt-3">Notre Mission</h2>
-                    <h5 class="mt-3"> L'assistant juridique assure les tâches de secrétariat pour un employeur du milieu juridique comme peut l'être un cabinet d'avocat, un notaire, une équipe de juriste d'entreprise ou encore un huissier.L'assistant juridique exerce des
+                <div class="cardi col-lg-6 col-md-6 col-sm-12 mt-5">
+                    <h2 class=" tire  mt-3 text-center">Notre Mission</h2>
+                    <h5 class="mt-3 text-center"> L'assistant juridique assure les tâches de secrétariat pour un employeur du milieu juridique comme peut l'être un cabinet d'avocat, un notaire, une équipe de juriste d'entreprise ou encore un huissier.L'assistant juridique exerce des
                         missions plus ou moins importantes et en rapport avec la justice selon ses capacités et sa connaissance du droit.Une assistance juridique reactive.L'imperatif de rapidite imposee par nos clients ne pose pas de probleme a nos equipes.
                     </h5>
                 </div>
-                <div class="rond col-lg-6 mt-5">
-                    <img class="rond" src="images/equipe.jpg" alt="">
+                <div class=" col-lg-6 col-md-6 col-sm-12 mt-5">
+                    <img class="rond  " src="images/equipe.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -126,7 +116,7 @@
     <section class="ftco-section bg-light ftco-faqs ">
         <div class="container ">
             <div class="row ">
-                <div class="col-lg-6 order-md-last ">
+                <div class="col-lg-6 col-md-6 col-sm-12 order-md-last ">
                     <div class="img d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0 " style="background-image:url(images/droit-civil-2.jpg); ">
                     </div>
                     <div class="d-flex mt-3">
@@ -134,7 +124,7 @@
                         <div class="img img-2 ml-md-2 w-100 " style="background-image:url(images/ammer.jpg); "></div>
                     </div>
                 </div>
-                <div class="col-lg-6 ">
+                <div class="col-lg-6 col-md-6 col-sm-12 ">
                     <div class="heading-section  ">
                         <h2 class="mb-3 ">Trouver mon jurist</h2>
                     </div>
@@ -220,8 +210,8 @@
             Programme de sensibilisation</h2>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mt-5"><img class="photo w-100" src="images/finger.jpg" alt=""></div>
-                <div class="col-lg-6 mt-5">
+                <div class="col-lg-6 col-md-12 col-sm-12 mt-5"><img class="rond " src="images/finger.jpg" alt=""></div>
+                <div class="col-lg-6 col-md-12 col-sm-12 mt-5">
                     <h2>Les droits de la femme</h2>
                     <h4>Nul n'est cense ignorer la loi</h4>
                     <p> Nous proposons un service axe la simplicite et methodiquement elaborée pour repondre a vos besoin.L'innovation vient du fait que l’utilisation de la technologie pour favoriser l’accès au droit et à la justice est un grand pas vers
@@ -237,7 +227,7 @@
         <div class="container couleur mt-5">
             <div class="row ">
                 <div class="col-lg-1"></div>
-                <div class=" col-lg-10  ">
+                <div class=" col-lg-10 col-md-12 col-sm-12 ">
                     <div class="mt-5 text-center titres">
                         <h2 class="hyper">Comment avoir acces a nos differents services </h2>
                     </div>
@@ -257,7 +247,7 @@
         <div id="contact" class="container ">
             <div class="row mt-5">
                 <h2 class="hyper tire">Contactez-nous</h2>
-                <div class="col-lg-6 mt-5">
+                <div class="col-lg-6  col-md-6 col-sm-6 mt-5">
                     <div class="contact-info ">
                         <div class="ci-item ">
                             <div class="ci-icon ">
@@ -291,22 +281,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mt-4">Géolocalisation
+                <div class=" rond col-lg-6 col-md-6 col-sm-6 mt-4">Géolocalisation
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62361.499191386705!2d-1.599627494759736!3d12.343111063927337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xe2e9429f5d331c7%3A0x82f28a1194b6aeb0!2sPissy%2C%20Ouagadougou!5e0!3m2!1sfr!2sbf!4v1648584442120!5m2!1sfr!2sbf "
-                        width="600 " height="450 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade "></iframe>
+                        width="600" height="450 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade "></iframe>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="footer bg-dark text-white mt-5">
-        <div class="container-fluid  text-center mt-5 ">
-            <h4 class="mt-2 text-white">Tous droits reservés Trouvermonjurist.com</h4>
-            <p class="mt-2">
-                Fait avec <i class=" text-danger fa-solid fa-heart ">
-                    </i> par l'équipe Trouvermonjurist.com
-            </p>
-
+    <footer class="footer  text-white mt-5">
+        <div class="container  text-center mt-5 ">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h4 class="mt-2 text-white">Tous droits reservés Trouvermonjurist.com</h4>
+                    <p class="mt-2">
+                        Fait avec <i class=" text-danger fa-solid fa-heart ">
+                            </i> par l'équipe Trouvermonjurist.com
+                    </p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
